# lure

./: .env.example  .gitignore  Cargo.toml  Containerfile  Dockerfile  LICENCE  README.md  build.rs  flake.nix  module.nix  rust-toolchain.toml
.github/: renovate.json
.github/actions/check-rust-input-parameters/: action.yaml
.github/workflows/: build-code.yaml  cd.yaml  ci.yaml  code-check.yaml  docker-push.yaml  docker-push@reusable.yaml  prepare-release.yaml  release.yaml
lure/: Cargo.toml
lure-cli/: Cargo.toml
lure-cli/src/: config.rs  lib.rs  start.rs
lure-config/: Cargo.toml
lure-config/src/: lib.rs  revolt.rs  stoat.rs
lure-core/: Cargo.toml
lure-core/src/: lib.rs
lure-lastfm-models/: Cargo.toml
lure-lastfm-models/src/: lib.rs
lure-lastfm-service/: Cargo.toml
lure-lastfm-service-config/: Cargo.toml
lure-lastfm-service-config/src/: lib.rs
lure-lastfm-service/src/: lib.rs  models.rs
lure-listenbrainz-models/: Cargo.toml
lure-listenbrainz-service/: Cargo.toml
lure-listenbrainz-service-config/: Cargo.toml
lure-listenbrainz-service/src/: config.rs  lib.rs  models.rs
lure-resources/: Cargo.toml
lure-resources/resources/: config.sample.yaml
lure-revolt-api/: Cargo.toml
lure-revolt-api/src/: lib.rs
lure-revolt-models/: Cargo.toml
lure-service-common/: Cargo.toml
lure-service-common/src/: lib.rs
lure-service-lastfm-config/src/: lib.rs
lure-service-lastfm/src/: lib.rs
lure-service-listenbrainz-config/src/: lib.rs
lure-service-listenbrainz/src/: lib.rs
lure-stoat-api/: Cargo.toml
lure-stoat-api/src/: lib.rs
lure-stoat-models/: Cargo.toml
lure-stoat-models/src/: lib.rs
lure-types/: Cargo.toml
lure-types/src/: lib.rs
lure/src/: config.rs  lib.rs  main.rs  service.rs  start.rs
nix/: module.nix
nix/modules/: lure.nix
packaging/archlinux/lure/: .SRCINFO  PKGBUILD
packaging/nix/: flake.nix
resources/: config.example.yaml  config.sample.yaml
revolt-api/: Cargo.toml
revolt-api/src/: lib.rs
src/: api.rs  channel_listener.rs  cli.rs  config.rs  exit_handler.rs  main.rs  revolt.rs  rive.rs
src/cli/: config.rs  mod.rs  start.rs
src/handlers/: exit.rs  mod.rs  update.rs
src/listeners/: exit.rs  update.rs
src/models/: lastfm.rs  listenbrainz.rs  mod.rs
src/services/: mod.rs
src/services/lastfm/: mod.rs  models.rs
src/services/listenbrainz/: mod.rs  models.rs
src/utils/: log.rs
