[workspace]
members = [
  "lure-cli",
  "lure-config",
  "lure-lastfm-models",
  "lure-lastfm-service",
  "lure-lastfm-service-config",
  "lure-listenbrainz-models",
  "lure-listenbrainz-service",
  "lure-listenbrainz-service-config",
  "lure-resources",
  "lure-revolt-api",
  "lure-revolt-models",
  "lure-service-common",
]
resolver = "3"

[workspace.package]
repository = "https://github.com/catuhana/lure"
authors = ["tuhana <tuhana.cat+git@gmail.com>"]
license = "MPL-2.0"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"

[profile.release]
opt-level = "z"
lto = "thin"

[workspace.lints.clippy]
nursery = "warn"
unused_trait_names = "warn"
std_instead_of_core = "warn"

[workspace.dependencies]
anyhow = "1.0.96"
async-trait = "0.1.86"
futures = "0.3.31"
reqwest = "0.12.12"
secrecy = "0.10.3"
serde = "1.0.218"
serde_yml = "0.0.12"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = "1.43.0"
