[workspace]
members = [
  "lure",
  "lure-config",
  "lure-core",
  "lure-lastfm-models",
  "lure-lastfm-service",
  "lure-lastfm-service-config",
  "lure-listenbrainz-models",
  "lure-listenbrainz-service",
  "lure-listenbrainz-service-config",
  "lure-resources",
  "lure-revolt-api",
  "lure-revolt-models",
]
resolver = "3"

[workspace.package]
repository = "https://github.com/catuhana/lure"
authors = ["tuhana <tuhana.cat+git@gmail.com>"]
license = "MPL-2.0"
version = "1.0.0"
edition = "2024"
rust-version = "1.88"

[profile.release]
opt-level = "z"
lto = "thin"

[workspace.lints.clippy]
nursery = "warn"
unused_trait_names = "warn"
std_instead_of_core = "warn"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
futures = "0.3.31"
reqwest = "0.12.23"
secrecy = "0.10.3"
serde = "1.0.228"
serde_yaml = "0.9.34-deprecated"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = "1.47.1"
