[package]
name = "lure-config"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
lure-lastfm-service-config = { path = "../lure-lastfm-service-config", optional = true }
lure-listenbrainz-service-config = { path = "../lure-listenbrainz-service-config", optional = true }

serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_yaml.workspace = true

[features]
lastfm-service = ["dep:lure-lastfm-service-config"]
listenbrainz-service = ["dep:lure-listenbrainz-service-config"]
