[package]
name = "lure-config"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
lure-lastfm-service = { path = "../lure-lastfm-service", optional = true }
lure-listenbrainz-service = { path = "../lure-listenbrainz-service", optional = true }

serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_yaml.workspace = true

[features]
lastfm-service = ["dep:lure-lastfm-service"]
listenbrainz-service = ["dep:lure-listenbrainz-service"]
