[package]
name = "lure-core"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
thiserror.workspace = true
futures-util = "0.3.31"
tokio = { workspace = true, features = ["time"] }
