[package]
name = "lure-lastfm-service-config"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_yml.workspace = true
