[package]
name = "lure-lastfm-service"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
lure-lastfm-models = { path = "../lure-lastfm-models" }
lure-core = { path = "../lure-core" }
lure-lastfm-service-config = { path = "../lure-lastfm-service-config" }

anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest = { workspace = true, features = ["json"] }
secrecy.workspace = true
thiserror.workspace = true
tokio.workspace = true
