[package]
name = "lure-lastfm-service"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
lure-core = { path = "../lure-core" }

anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest = { workspace = true, features = ["json"] }
secrecy = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
