[package]
name = "lure-listenbrainz-service"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
lure-listenbrainz-models = { path = "../lure-listenbrainz-models" }
lure-core = { path = "../lure-core" }
lure-listenbrainz-service-config = { path = "../lure-listenbrainz-service-config" }

anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest = { workspace = true, features = ["json"] }
secrecy.workspace = true
thiserror.workspace = true
tokio.workspace = true
