[package]
name = "lure-listenbrainz-service"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
lure-types = { path = "../lure-types" }
reqwest = { workspace = true, features = ["json"] }
secrecy = { workspace = true, features = ["serde"] }
serde_yaml.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
