[package]
name = "lure-stoat-api"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
lure-stoat-models = { path = "../lure-stoat-models" }
reqwest = { workspace = true, features = ["json"] }
thiserror.workspace = true
