[package]
name = "lure"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
lure-config = { path = "../lure-config", optional = true }
lure-resources = { path = "../lure-resources" }
lure-core = { path = "../lure-core", optional = true }
lure-lastfm-service = { path = "../lure-lastfm-service", optional = true }
lure-lastfm-service-config = { path = "../lure-lastfm-service-config", optional = true }
lure-listenbrainz-service = { path = "../lure-listenbrainz-service", optional = true }
lure-listenbrainz-service-config = { path = "../lure-listenbrainz-service-config", optional = true }
lure-revolt-api = { path = "../lure-revolt-api", optional = true }
lure-revolt-models = { path = "../lure-revolt-models" }

anyhow.workspace = true
async-trait.workspace = true
clap = { version = "4.5.48", features = ["derive"] }
demand = "1.7.2"
figment = { version = "0.10.19", features = ["env", "yaml"], optional = true }
figment_file_provider_adapter = { version = "0.1.1", optional = true }
futures.workspace = true
reqwest = { workspace = true, features = ["json"] }
regex-lite = "0.1.8"
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }

[features]
default = ["lastfm-service", "listenbrainz-service"]
lastfm-service = [
  "dep:lure-config",
  "lure-config?/lastfm-service",
  "dep:lure-core",
  "dep:lure-lastfm-service",
  "dep:lure-lastfm-service-config",
  "dep:lure-revolt-api",
  "dep:figment",
  "dep:figment_file_provider_adapter",
]
listenbrainz-service = [
  "dep:lure-config",
  "lure-config?/listenbrainz-service",
  "dep:lure-core",
  "dep:lure-listenbrainz-service",
  "dep:lure-listenbrainz-service-config",
  "dep:lure-revolt-api",
  "dep:figment",
  "dep:figment_file_provider_adapter",
]
