[package]
name = "lure"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
figment = { version = "0.10.19", features = ["env", "yaml"], optional = true }
figment_file_provider_adapter = { version = "0.1.1", optional = true }
futures.workspace = true
lure-config = { path = "../lure-config", optional = true }
lure-core = { path = "../lure-core", optional = true }
lure-lastfm-service = { path = "../lure-lastfm-service", optional = true }
lure-listenbrainz-service = { path = "../lure-listenbrainz-service", optional = true }
lure-stoat-api = { path = "../lure-stoat-api", optional = true }
lure-stoat-models = { path = "../lure-stoat-models" }
reqwest = { workspace = true, features = ["json"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }

[features]
default = ["lastfm-service", "listenbrainz-service"]
lastfm-service = [
  "dep:lure-config",
  "lure-config?/lastfm-service",
  "dep:lure-core",
  "dep:lure-lastfm-service",
  "dep:lure-stoat-api",
  "dep:figment",
  "dep:figment_file_provider_adapter",
]
listenbrainz-service = [
  "dep:lure-config",
  "lure-config?/listenbrainz-service",
  "dep:lure-core",
  "dep:lure-listenbrainz-service",
  "dep:lure-stoat-api",
  "dep:figment",
  "dep:figment_file_provider_adapter",
]
