[package]
name = "lure"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
figment = { version = "0.10.19", features = ["env", "yaml"] }
figment_file_provider_adapter = { version = "0.1.1" }
futures.workspace = true
lure-config = { path = "../lure-config" }
lure-types = { path = "../lure-types" }
lure-lastfm-service = { path = "../lure-lastfm-service" }
lure-listenbrainz-service = { path = "../lure-listenbrainz-service" }
lure-stoat-api = { path = "../lure-stoat-api" }
lure-stoat-models = { path = "../lure-stoat-models" }
reqwest = { workspace = true, features = ["json"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
